--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,13 +22,18 @@
     "@heroui/theme": "2.4.17",
     "@react-aria/ssr": "3.9.9",
     "@react-aria/visually-hidden": "3.8.24",
-    "clsx": "2.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
+    "lucide-react": "^0.522.0",
+    "motion": "^12.18.1",
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
@@ -55,7 +60,7 @@
     "globals": "16.0.0",
     "postcss": "8.5.3",
     "prettier": "3.5.3",
-    "tailwind-variants": "0.3.0",
+    "tailwind-variants": "^0.3.0",
     "tailwindcss": "3.4.16",
     "typescript": "5.6.3"
   }
