--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "@react-aria/visually-hidden": "3.8.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "11.13.1",
+    "framer-motion": "^11.13.1",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.522.0",
     "motion": "^12.18.1",
