--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,13 @@
     "@heroui/theme": "2.4.17",
     "@react-aria/ssr": "3.9.9",
     "@react-aria/visually-hidden": "3.8.24",
+    "@tabler/icons-react": "^3.34.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.522.0",
-    "motion": "^12.18.1",
+    "motion": "^12.19.1",
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "react": "18.3.1",
